// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Cart /> renders properly with cart array not empty 1`] = `
<Fragment>
  <CartTable
    changeQuantity={[MockFunction]}
    deleteProductFromCart={[MockFunction]}
    isCurrencyLoading={true}
    productsInCart={
      Array [
        Object {
          "currentCurrencyCost": 5,
          "description": "test product 1 description",
          "id": "1",
          "imageURL": "#",
          "quantity": 3,
          "title": "test product 1",
        },
        Object {
          "currentCurrencyCost": 10,
          "description": "test product 2 description",
          "id": "2",
          "imageURL": "#",
          "quantity": 5,
          "title": "test product 2",
        },
      ]
    }
    sortColumn="id"
  />
  <div
    className="row justify-content-between mx-2"
  >
    <TotalCost
      customClasses="h5 my-auto"
      total={15}
    />
    <Link
      className="btn btn-secondary justify-content-end"
      to="/order"
    >
      Order Now!
    </Link>
  </div>
</Fragment>
`;

exports[`<Cart /> renders properly with default props 1`] = `
<h1
  className="m-3 text-center"
>
  Your cart is empty
</h1>
`;

exports[`<Cart /> renders properly with not empty cart and currentUserName provided 1`] = `
<Fragment>
  <CartTable
    changeQuantity={[MockFunction]}
    deleteProductFromCart={[MockFunction]}
    isCurrencyLoading={true}
    productsInCart={
      Array [
        Object {
          "currentCurrencyCost": 5,
          "description": "test product 1 description",
          "id": "1",
          "imageURL": "#",
          "quantity": 3,
          "title": "test product 1",
        },
      ]
    }
    sortColumn="id"
  />
  <div
    className="row justify-content-between mx-2"
  >
    <TotalCost
      customClasses="h5 my-auto"
      total={5}
    />
    <Link
      className="btn btn-secondary justify-content-end"
      to="/order/mycart"
    >
      Order Now!
    </Link>
  </div>
</Fragment>
`;
